issue select file not working on iPhone

--- a/src/Pages/Upload/Upload.module.scss
+++ b/src/Pages/Upload/Upload.module.scss
@@ -23,34 +23,10 @@
 }
 
 .uploadInput {
+  color: colors.$text;
   margin: 10px;
 }
 
-[type='file'] {
-  border: 0;
-  clip: rect(0, 0, 0, 0);
-  height: 1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute !important;
-  white-space: nowrap;
-  width: 1px;
-
-  + label {
-    padding: 2px 5px;
-    border: 1px solid colors.$text;
-    color: colors.$text;
-  }
-
-  &:focus + label,
-  + label:hover {
-    border: 2px solid colors.$text;
-  }
-
-  &:focus + label {
-    border: 3px solid colors.$text;
-  }
-}
 .homeBtn {
   width: 100%;
   position: absolute;
